Add script for raw data and add UK aware classification.

--- a/vignettes/abxaware.Rmd
+++ b/vignettes/abxaware.Rmd
@@ -2,7 +2,7 @@
 title: 'abxaware'
 subtitle: "Understanding antibiotic use using the AWaRe classification"
 author: "Jacob Anhøj & Jonas Bredtoft Boel"
-date: "2021-06-28"
+date: "2021-09-01"
 output: 
   rmarkdown::html_vignette:
     toc: true
@@ -59,7 +59,7 @@ awr_plot(abx_sales,
 
 To create a plot like the one above, you need a data frame with at least two columns: ATC code and amount. The ATC code is the unique drug identifier, and the amount variable is the amount of drug with this ATC code used. Amount is normally given in defined daily dose (DDD) units, but other measures may be used. Additionally, the data frame may include variables for time period and organisational unit allowing for creation of faceted time series plots. Note that only drugs with a complete ATC code with 7 characters can be classified, and that not all drugs have been classified. Unclassifiable drugs appear in the outputs as "other" unless `ignore.other = TRUE`.
 
-`abxaware` contains two example data frames: `abx_sales` and `abx_days`. See the help pages for details.
+<!-- `abxaware` contains two example data frames: `abx_sales` and `abx_days`. See the help pages for details. -->
 
 In the following examples we will use the `abx_sales` data frame. In addition to the `atc` and `ddd` columns, `abx_sales` have a time variable (`month`) and two unit variables (`region` and `hospital`). That is, for each month, atc group and hospital in one of five Danish regions the amount of drug used is found in the `ddd` variable.
 
