--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of abxaware is to help aggregating and plotting antibiotic usage data in accordance with the WHO AWaRe classification easy.
+The goal of abxaware is to help aggregate and plot antibiotic usage data in accordance with the WHO AWaRe classification.
 
 ## Installation
 
