--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ devtools::install_github("anhoej/abxaware",
                          build_vignettes = TRUE)
 ```
 
-Go to https://anhoej.github.io/abxaware/ for further information.
+To get started, read the vignette: https://anhoej.github.io/abxaware/articles/abxaware.html.
 
 ## Example
 
