--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(
 # abxaware
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/anhoej/abxaware/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/anhoej/abxaware/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The goal of abxaware is to help aggregate and plot antibiotic usage data in accordance with the WHO AWaRe classification.
